--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: list files
-        run: ls;
+        run: |
+            cat README.md
+            echo "abc" > README.md
 
       - name: use github-follower
         id: hello
