chore: update main.yml
Signed-off-by: Jie Ding <jie.ding@linkall.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
-on: [push]
-
+on:
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: '0 20 * * *'
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
