--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: use github-follower
-        id: hello
-        uses: JieDing/github-followers@main
+        id: github-follower
+        uses: JieDing/github-followers-action@v1.0.0
         env:
           login: ${{ github.repository_owner }}
           pat: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
