--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: use github-follower
-        id: github-follower
+        id: github-follower-action
         uses: JieDing/github-followers-action@main
         env:
           login: ${{ github.repository_owner }}
