--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 on:
-  push:
-    branches: [ "main" ]
+ # push:
+ #   branches: [ "main" ]
   schedule:
-    - cron: '0 20 * * *'
+    - cron: '15 1 * * *'
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
